kong/agent/tests/artifacts/api_crs/prod-httproute-options.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    konghq.com/strip-path: true,
  labels:
    apiName: APIResourceEndpoint
    apiUUID: 780d341c-20f0-44e4-aa42-4cff613b9d50
    environment: production
    organization: 2e14f1a627e0f7388df2efa85fba6816ac25f094
    routeType: options
  name: a1bf6720c628f2045fb83ba478eed39dd06dff4a-production-httproute-0-options
  namespace: apk
spec:
  hostnames:
  - default.gw.wso2.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: kong
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: backend-ad9296e52f713ad6d4be850f604eb03eafcbae2c
      port: 80
      weight: 1
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          replaceFullPath: /get
          type: ReplaceFullPath
    matches:
    - method: OPTIONS
      path:
        type: RegularExpression
        value: /httpbin/1.0.0/get
  - backendRefs:
    - group: ""
      kind: Service
      name: backend-ad9296e52f713ad6d4be850f604eb03eafcbae2c
      port: 80
      weight: 1
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          replaceFullPath: /post
          type: ReplaceFullPath
    matches:
    - method: OPTIONS
      path:
        type: RegularExpression
        value: /httpbin/1.0.0/post
