kong/agent/tests/artifacts/api_crs/sand-acl.yaml
apiVersion: configuration.konghq.com/v1
config:
  allow:
  - api-67321124153e41d57e7b427c1150106de015240b-sandbox
kind: KongPlugin
metadata:
  labels:
    apiName: APIResourceEndpoint
    apiUUID: 780d341c-20f0-44e4-aa42-4cff613b9d50
    organization: 2e14f1a627e0f7388df2efa85fba6816ac25f094
  name: api-acl-adaf9bf18ed1c6c07acdc951f3a7449758c084ce-780d341c-20f0-44e4-aa42-4cff613b9d50-api-sandbox
  namespace: kong
plugin: acl
