kong/agent/tests/artifacts/api_crs/sand-backend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    apiName: APIResourceEndpoint
    apiUUID: 780d341c-20f0-44e4-aa42-4cff613b9d50
    environment: production
    organization: 2e14f1a627e0f7388df2efa85fba6816ac25f094
  name: backend-807288cfe58368ddaad4cf4c79cd7a7c68baef1a
  namespace: apk
spec:
  externalName: httpbin.org
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  sessionAffinity: None
  type: ExternalName
status:
  loadBalancer: {}
